--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "lib": ["ES2020", "DOM"],
     "declaration": true,
+    "declarationMap": true,
     "strict": true,
     "outDir": "./dist",
     "rootDir": "./src",
