--- a/.github/workflows/scip-index.yml
+++ b/.github/workflows/scip-index.yml
@@ -8,6 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: validator-schemas
+
+      - name: Checkout validator-core
+        uses: actions/checkout@v4
+        with:
+          repository: taber-miyauchi/validator-core
+          path: validator-core
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -15,18 +23,18 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
+        working-directory: validator-schemas
         run: npm install
 
       - name: Install scip-typescript
         run: npm install -g @sourcegraph/scip-typescript
 
-      - name: Build TypeScript
-        run: npm run build
-
       - name: Generate SCIP index
-        run: scip-typescript index tsconfig.scip.json
+        working-directory: validator-schemas
+        run: scip-typescript index
 
       - name: Upload SCIP index to Sourcegraph
+        working-directory: validator-schemas
         run: |
           curl -L https://sourcegraph.com/.api/src-cli/src_linux_amd64 -o /usr/local/bin/src
           chmod +x /usr/local/bin/src
