--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@taber-miyauchi/validator-schemas",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Validator implementations for common data types",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,7 +13,7 @@
   "author": "taber-miyauchi",
   "license": "MIT",
   "dependencies": {
-    "@taber-miyauchi/validator-core": "0.3.0"
+    "@taber-miyauchi/validator-core": "file:../validator-core"
   },
   "devDependencies": {
     "typescript": "^5.3.0"
