--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@taber-miyauchi/validator-schemas",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Validator implementations for common data types",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "clean": "rm -rf dist",
@@ -13,10 +13,10 @@
   "author": "taber-miyauchi",
   "license": "MIT",
   "dependencies": {
-    "@taber-miyauchi/validator-core": "file:../validator-core"
+    "@taber-miyauchi/validator-core": "0.5.0"
   },
   "devDependencies": {
     "typescript": "^5.3.0"
   },
-  "files": ["dist"]
+  "files": ["src", "dist"]
 }
